# Rust-Study

./: .gitignore  README.md
20250303/reference_bolow/: Cargo.toml
20250304/my_enum/: Cargo.toml
20250322/trait_test2/: Cargo.toml
20250323/minigrep/: poem.txt  read.md
20250324/RecCell_01/: Cargo.toml
20250324/closures_01/: Cargo.toml
20250324/pointer_01/: Cargo.toml
20250325/concurrent_01/: Cargo.toml
echor/: Cargo.toml  mk-outs.sh
ezytutors/: Cargo.toml
ezytutors/tutor-db/: .env  Cargo.toml  database_crate.sh  database_create4.sh  database_v.sh  iter5_bash.sh
ezytutors/tutor-db/src/: database_iter4.sql
ezytutors/tutor-db/src/iter2/: handlers.rs  models.rs  routes.rs  state.rs
ezytutors/tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs  routes.rs  state.rs
ezytutors/tutor-db/src/iter4/: db_access.rs  handlers.rs  models.rs  routes.rs  state.rs
ezytutors/tutor-db/src/iter5/: errors.rs  routes.rs  state.rs
ezytutors/tutor-db/src/iter5/dbaccess/: course.rs  mod.rs  tutor.rs
ezytutors/tutor-db/src/iter5/dbscripts/: data_create_sh.sh
ezytutors/tutor-db/src/iter5/handlers/: course.rs  general.rs  mod.rs  tutor.rs
ezytutors/tutor-db/src/iter5/models/: course.rs  mod.rs  tutor.rs
ezytutors/tutor-web-app-ssr/: .env  Cargo.toml
ezytutors/tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs  mod.rs  model.rs  routes.rs  state.rs
ezytutors/tutor-web-app-ssr/src/iter5/dbscript/: database_create.sh
ezytutors/tutor-web-app-ssr/src/iter6/: errors.rs  model.rs  routes.rs
ezytutors/tutor-web-app-ssr/src/iter6/handler/: auth.rs  course.rs  mod.rs
ezytutors/tutor-web-app-ssr/static/iter2/: form.html
ezytutors/tutor-web-app-ssr/static/iter5/: register.html
headr/: Cargo.toml
wcr/: mk-outs.sh
(+72 files in other folders)
