[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-files = "0.6.2"
tera = "1.17.0"

# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }
serde_json= "1.0.85"

# Postgres access library
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono" ] }

# Password hash
rust-argon2 = "1.0.0"

# Environment access
dotenv = "0.15.0"
awc = { version = "3.0.1", features = [ "openssl" ] }
